[gd_scene load_steps=20 format=2]

[ext_resource path="res://Assets/FallGame/Animations/RunningAnim3.png" type="Texture" id=1]
[ext_resource path="res://Assets/FallGame/Animations/RunningAnim1.png" type="Texture" id=2]
[ext_resource path="res://Assets/FallGame/Animations/RunningAnim2.png" type="Texture" id=3]
[ext_resource path="res://Assets/FallGame/Animations/RunningAnim4.png" type="Texture" id=4]
[ext_resource path="res://FallGame/FallGuy.gd" type="Script" id=5]
[ext_resource path="res://Assets/FallGame/Animations/HurtAnim1.png" type="Texture" id=6]
[ext_resource path="res://Assets/FallGame/Animations/HurtAnim2.png" type="Texture" id=7]
[ext_resource path="res://Assets/SFX/Jump1.wav" type="AudioStream" id=8]
[ext_resource path="res://Assets/SFX/Jump2.wav" type="AudioStream" id=9]
[ext_resource path="res://Assets/SFX/Jump3.wav" type="AudioStream" id=10]
[ext_resource path="res://Assets/SFX/Hurt1.wav" type="AudioStream" id=11]
[ext_resource path="res://Assets/SFX/Hurt2.wav" type="AudioStream" id=12]
[ext_resource path="res://Assets/SFX/Hurt3.wav" type="AudioStream" id=13]
[ext_resource path="res://Assets/FallGame/Animations/JumpingAnim1.png" type="Texture" id=14]
[ext_resource path="res://Assets/FallGame/Animations/JumpingAnim2.png" type="Texture" id=15]
[ext_resource path="res://Assets/FallGame/Animations/SlidingAnim2.png" type="Texture" id=16]
[ext_resource path="res://Assets/FallGame/Animations/SlidingAnim1.png" type="Texture" id=17]

[sub_resource type="CapsuleShape2D" id=1]
radius = 20.0441
height = 87.4643

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 7 ), ExtResource( 6 ) ],
"loop": true,
"name": "Hurt",
"speed": 6.0
}, {
"frames": [ ExtResource( 17 ), ExtResource( 16 ) ],
"loop": true,
"name": "Sliding",
"speed": 7.0
}, {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 1 ), ExtResource( 4 ) ],
"loop": true,
"name": "Running",
"speed": 7.5
}, {
"frames": [ ExtResource( 15 ) ],
"loop": true,
"name": "Jumping2",
"speed": 5.0
}, {
"frames": [ ExtResource( 14 ) ],
"loop": true,
"name": "Jumping1",
"speed": 5.0
} ]

[node name="FallGuy" type="KinematicBody2D"]
collision_layer = 9
collision_mask = 3
script = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( -0.115204, -0.115196 )
scale = Vector2( 4, 4 )
frames = SubResource( 2 )
animation = "Sliding"
playing = true

[node name="HurtTimer" type="Timer" parent="."]
wait_time = 0.8
one_shot = true

[node name="SFX" type="Node" parent="."]

[node name="Jump1" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource( 8 )

[node name="Jump2" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource( 9 )

[node name="Jump3" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource( 10 )

[node name="Hurt1" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource( 11 )

[node name="Hurt2" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource( 12 )

[node name="Hurt3" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource( 13 )

[connection signal="timeout" from="HurtTimer" to="." method="_on_HurtTimer_timeout"]
